--- a/bib/PhDfltClean.bib
+++ b/bib/PhDfltClean.bib
@@ -842,6 +842,17 @@
  year = {2005}
 }
 
+@article{Durinck2009b,
+ author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
+ doi = {10.1038/nprot.2009.97},
+ journal = {Nature protocols},
+ number = {8},
+ pages = {1184--1191},
+ title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt.},
+ volume = {4},
+ year = {2009}
+}
+
 @article{Durinck2009,
  author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
  doi = {10.1038/nprot.2009.97},
@@ -850,17 +861,6 @@
  pages = {1184--1191},
  publisher = {Nature Publishing Group},
  title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt},
- volume = {4},
- year = {2009}
-}
-
-@article{Durinck2009b,
- author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
- doi = {10.1038/nprot.2009.97},
- journal = {Nature protocols},
- number = {8},
- pages = {1184--1191},
- title = {Mapping identifiers for the integration of genomic datasets with the R/Bioconductor package biomaRt.},
  volume = {4},
  year = {2009}
 }
@@ -912,6 +912,16 @@
  title = {Genomic regulatory blocks underlie extensive microsynteny conservation in insects},
  volume = {17},
  year = {2007}
+}
+
+@article{Falk2018,
+ author = {Falk, Martin and Feodorova, Yana and Naumova, Natasha and Imakaev, Maxim and Lajoie, Bryan R. and Leonhardt, Heinrich and Joffe, Boris and Dekker, Job and Fudenberg, Geoffrey and Solovei, Irina and Mirny, Leonid},
+ doi = {10.1101/244038},
+ journal = {bioRxiv},
+ pages = {244038},
+ publisher = {Cold Spring Harbor Laboratory},
+ title = {Heterochromatin drives organization of conventional and inverted nuclei},
+ year = {2018}
 }
 
 @article{Fantes1995,
@@ -2678,6 +2688,18 @@
  year = {2014}
 }
 
+@article{Rao2017,
+ author = {Rao, Suhas S.P. and Huang, Su-Chen and Hilaire, Brian Glenn St and Engreitz, Jesse M. and Perez, Elizabeth M. and Kieffer-Kwon, Kyong-Rim and Sanborn, Adrian L. and Johnstone, Sarah E. and Bascom, Gavin D. and Bochkov, Ivan D. and Huang, Xingfan and Shamim, Muhammad S. and Shin, Jaeweon and Turner, Douglass and Ye, Ziyi and Omer, Arina D. and Robinson, James T. and Schlick, Tamar and Bernstein, Bradley E. and others},
+ doi = {10.1016/j.cell.2017.09.026},
+ journal = {Cell},
+ number = {2},
+ pages = {305--320.e24},
+ publisher = {Elsevier Inc.},
+ title = {Cohesin Loss Eliminates All Loop Domains},
+ volume = {171},
+ year = {2017}
+}
+
 @article{Redin2017,
  author = {Redin, Claire and Brand, Harrison and Collins, Ryan L and Kammin, Tammy and Mitchell, Elyse and Hodge, Jennelle C and Hanscom, Carrie and Pillalamarri, Vamsee and Seabra, Catarina M and Abbott, Mary-Alice and Abdul-Rahman, Omar A and Aberg, Erika and Adley, Rhett and Alcaraz-Estrada, Sofia L and Alkuraya, Fowzan S and An, Yu and Anderson, Mary-Anne and Antolik, Caroline and Anyane-Yeboa, Kwame and others},
  doi = {10.1038/ng.3720},
@@ -2945,6 +2967,17 @@
  number = {December 2016},
  pages = {1--15},
  title = {Nucleotide sequence and DNaseI sensitivity are predictive of 3D chromatin architecture},
+ year = {2017}
+}
+
+@article{Schwarzer2017,
+ author = {Schwarzer, Wibke and Abdennur, Nezar and Goloborodko, Anton and Pekowska, Aleksandra and Fudenberg, Geoffrey and Loe-Mie, Yann and Fonseca, Nuno A and Huber, Wolfgang and {H Haering}, Christian and Mirny, Leonid and Spitz, Francois},
+ doi = {10.1038/nature24281},
+ journal = {Nature},
+ number = {7678},
+ pages = {51--56},
+ title = {Two independent modes of chromatin organization revealed by cohesin removal.},
+ volume = {551},
  year = {2017}
 }
 
