--- a/03-TAD_evolution.Rmd
+++ b/03-TAD_evolution.Rmd
@@ -2,7 +2,7 @@
 
 ###  Preamble {-}
 > 
-> This chapter is submitted for publication to BMC Biology and currently under peer-review. A preprint is availible from bioRxiv:
+> This chapter is submitted for publication and currently under peer-review. A preprint is availible from bioRxiv:
 >
 > Krefting J, Andrade-Navarro MA, **Ibn-Salem J**^#^. **_Evolutionary stability of topologically associating domains is associated with conserved gene regulation_**. bioRxiv. 2017. [doi:doi.org/10.1101/231431](https://doi.org/10.1101/231431).
 > 
