--- a/06-discussion.Rmd
+++ b/06-discussion.Rmd
@@ -3,7 +3,7 @@
 Recent developments in proximity-ligation methods allow measuring pairwise chromatin interactions genome-wide. Resulting interaction maps revealed a hierarchical organization of genome folding with the intrinsic property of interphase chromosomes to fold into frequently interacting domains, called TADs. 
 This non-random organization lead to many fundamental questions of how genome folding contributes to functional segregation in genomes and how domain organization ensures precise regulation of gene expression (see chapter [1](#intro)).
 
-Chromatin interaction data can be integrated computationally with one-dimensional measurements along the genome. This allows annotating folding structures with diverse functional data such as epigenetic marks, protein binding signals, tissue-specific gene expression, or sequence conservation across genomes. Work in this thesis applied such approaches to analyze the functions of TADs for gene regulation in the contexts of evolution and diseases. The results highlight the role of TADs as regulatory environments for gene expression, their stability during hundreds of millions of years of evolution and disruptions by disease-associated genetic variants. Furthermore, recent insights into molecular mechanisms of chromatin loop formation are used to predict long-range interactions genome-wide from protein binding data. 
+Chromatin interaction data can be integrated computationally with one-dimensional measurements along the genome. This allows annotating folding structures with diverse functional data such as epigenetic marks, protein binding signals, tissue-specific gene expression, or sequence conservation across genomes. Work in this thesis applied such approaches to analyze the functions of TADs for gene regulation in the contexts of evolution and diseases. The results highlight the role of TADs as regulatory environments for gene expression, their stability during millions of years of evolution and disruptions by disease-associated genetic variants. Furthermore, recent insights into molecular mechanisms of chromatin loop formation are used to predict long-range interactions genome-wide from protein binding data. 
 
 This section discusses the results of chapters \@ref(paralog-regulation), \@ref(TAD-evolution), \@ref(position-effect), and \@ref(loop) in light of the most recent literature and suggest further research perspectives.
 
@@ -11,15 +11,15 @@ This section discusses the results of chapters \@ref(paralog-regulation), \@ref(
 
 The ability to measure gene expression genome-wide in many different tissues and conditions
 allowed the observation of clusters of co-expressed genes in higher eukaryotes [@Boutanaev2002; @Purmann2007]. It was previously speculated that the structure of the chromatin and cis-acting units might be responsible for the observed co-expression [@Sproul2005; @Purmann2007]. 
-The ability to measure chromatin interactions lead to the discovery and characterization of TADs and enforce the question whether TADs insulate regulatory units in the genome two allow co-regulation of functionally similar genes.
+The ability to measure chromatin interactions leads to the discovery and characterization of TADs and enforces the question whether TADs insulate regulatory units in the genome to allow co-regulation of functionally similar genes.
 
 To study the interplay between TADs, gene co-regulation, and evolution in the human genome, mouse, and dog genome, we decided to focus on pairs of paralog genes. 
 Paralog genes arise from gene duplication events during evolution. 
 Because of their homology and resulting sequence similarity, paralogs genes encode for proteins with related functions. This makes them an interesting model for functionally related and co-regulated genes. 
-Indeed, gene expression data from various sources across different cell types and tissues show 
+Indeed, gene expression data from various sources across different cell types and tissues 
 have significantly increased expression correlation compared to other close genes.
 
-Most duplications appear to be created by tandem duplications in direct orientation [@Newman2015], which explains the clustering of paralogs in the genome with short genomic distances and often the same transcription senes (Fig. \@ref(fig:paraData)). 
+Most duplications appear to be created by tandem duplications in direct orientation [@Newman2015], which explains the clustering of paralogs in the genome with short genomic distances and enrichment for beeing transcibed from the same DNA strand (Fig. \@ref(fig:paraData)). 
 The resulting properties of paralog pairs complicated our analysis by the need for an adequately sampled control set of gene pairs. 
 However, the development of careful sampling techniques results in control gene pairs that have similar properties regarding genomic distance, transcription strand, number of enhancers per gene, and the distance of enhancers to genes. This sampling approach allowed us to compare properties of paralog gene pairs to background distribution that model expectations by chance. 
 
@@ -39,14 +39,14 @@ These results show that evolutionary and functionally related genes tend to be c
 The association of gene expression with gene localizing in TADs is consistent with a very recent computational study with the aim to separate the proportion of expression associated with genome organization from independent sources. A large fraction of expression can be attributed to the positioning of genes in genome architecture and highly informative for TAD activity and organization [@Rennie2018]. 
 
 
-## Evolutionary novelties by gene duplications and altered regulatory environments
+## Evolution by gene duplications and altered regulatory environments
 <!-- Creation of new genes in shared regulatory environments -->
 
-However, the analysis of paralog regulation with respect to three-dimensional genome folding allows further conclusions about the evolutionary history of genes and how new functionality by novel genes is most efficient created during evolution. 
+However, the analysis of paralog regulation with respect to three-dimensional genome folding allows further conclusions about the evolutionary history of genes and how new functionality by novel genes is most efficiently created during evolution. 
 Loss-of-function mutations degrade most young duplicated genes into pseudogenes [@Lynch2003].
 These observations raise the question of which mechanisms led to the survival and expression of the many paralog genes. Some models explain paralog genes by sub- or neo-functionalization or sharing of gene dosage [@Lan2016].
 Our observation of co-regulated paralogs in the regulatory environments of TADs is consistent with a very recent analysis of expression pattern between young and old paralogs [@Lan2016].
-This study often finds one copy of young paralogs to be downregulated indicating that dosage-sharing allows for initial survival of duplicated genes a slower functional adaption [@Lan2016].
+This study often finds one copy of young paralogs to be downregulated, indicating that dosage-sharing allows for initial survival of duplicated genes and slow functional adaption later on [@Lan2016].
 
 
 The creation of paralogs by tandem duplication might also be an efficient evolutionary mechanism to introduce additional functionality to a gene by keeping the original gene unaffected.
@@ -84,11 +84,11 @@ Genetic variations that alter genome folding and expose genes to new regulatory 
 
 ## TADs are stable across large evolutionary time-scales
 
-As consequence of these association of TADs with co-regulation, enhancer sharing, and co-expression, we hypothesized TADs provide regulatory environments for genes and are therefore conserved during evolution.
+As consequence of these association of TADs with co-regulation, enhancer sharing, and co-expression, we hypothesized that TADs provide regulatory environments for genes and are therefore conserved during evolution.
 More specifically, we asked whether genomic rearrangement between distantly related species would more frequently occur at TAD boundaries or within TAD regions. 
 Furthermore, we hypothesized that disruption of TADs during evolution might be associated with changes in gene expression programs between the species.
 
-We find evolutionary rearrangements between distal vertebrate species highly enriched at TAD boundaries and depleted within TADs (Chapter \@ref(TAD-evolution)).
+We find evolutionary rearrangements between distant vertebrate species highly enriched at TAD boundaries and depleted within TADs (Chapter \@ref(TAD-evolution)).
 This is consistent with recent findings of enriched non-coding sequence conservation in TADs [@Harmston2017; @Polychronopoulos2017]. 
 Furthermore, these results are consistent with a very recent study investigating the requirement of the ultra-conserved non-coding regions containing enhancers by knock-out experiments in mice [@Dickel2018]. Knock-out mice that lack individual or combination of enhancers were viable but showed strong neurological phenotypes.
 These effects indicate that the remarkably strong sequence conservation likely results from fitness deficit that appear subtle in a laboratory setting [@Dickel2018].
@@ -104,37 +104,37 @@ In this study gene expression conservation could best be explained by the number
 
 These results, together with the strong non-coding conservation in TADs [@Harmston2017], and our finding of reduced rearrangements of TADs and association to conserved gene expression indicates, that selective pressure acts on the integrity of TADs. 
 
-The analysis of genomic rearrangements between human and other species during evolution lead to the conclusion that TADs are essential regulatory building blocks of genomes. 
-This is supported by stonrg enrichment for non-coding conservation in TADs [@Harmston2017].
+The analysis of genomic rearrangements between human and other species during evolution leads to the conclusion that TADs are essential regulatory building blocks of genomes. 
+This is supported by strong enrichment for non-coding conservation in TADs [@Harmston2017].
 Furthermore, changes of expression profiles are associated with the disruption of TADs during evolution. 
 This altered regulation upon TAD disruption might be beneficial for an organism and allow evolutionary leaps (as discussed above).
-However, in most cases, these gene miss-expression might be detrimental for an organism, as was observed in genetic diseases [@Ibn-Salem2014; @Lupianez2015] and cancers (as discussed below).
+However, in most cases, these gene miss-expressions might be detrimental for an organism, as was observed in genetic diseases [@Ibn-Salem2014; @Lupianez2015] and cancers (as discussed below).
 Therefore, we interpret the depletion of evolutionary rearrangements in TADs and the expression change associated with TAD disruption to be a consequence of selective pressure on TAD structure.
 
 <!-- Connection from TAD-evolution to position effect -->
 <!-- While miss-regulation upon TAD disruption might be beneficial for an organism and allow evolutionary leaps (as discussed above), in most cases TAD disruptions might be detrimental for an organism, as can be seen in genetic diseases and cancers (as discussed below).  -->
 
-## Gene miss-expression by altered TADs in disease {#TAD-disease}
+## Gene expression changes by altered TADs in disease {#TAD-disease}
 
 Their conservation during evolution supports the functional importance of TADs.
-However, if TADs are indeed crucial for proper gene regulation during development, one would expect that TAD disruptions are associated with disease and lead to phenotypes by miss-regulation of phenotypically relevant genes.
+However, if TADs are indeed crucial for proper gene regulation during development, one would expect that TAD disruptions are associated with disease and lead to phenotypes by dysregulation of phenotypically relevant genes.
 
 We analyzed balanced chromosomal rearrangements in 17 subjects with diverse pathogenic phenotypes. 
 The rearrangement breakpoints are in non-coding regions but frequently disrupt TADs. 
 Furthermore, we reported disruption of long-range chromatin interactions between several enhancers and genes whose annotated clinical features are strongly associated with the subjects phenotypes. 
 For some candidate genes, we confirm gene expression changes in cell lines derived from subjects with such rearrangements (Chapter \@ref(position-effect)). 
-Importantly, these effects of rearrangements in disease genomes are consistent with the comparative genomic analysis finding selective pressure on TAD disruptions.
+Importantly, effects of rearrangements in disease genomes are consistent with the comparative genomic analysis finding selective pressure on TAD disruptions.
 
-The causal relationship between TAD disruption, miss-expression and pathogenic phenotypes has been studied recently in more detail (revied for example in [@Krijger2016; @Achinger-Kawecka2017; @Yu2017; @Andrey2017]). 
+The causal relationship between TAD disruption, miss-expression and pathogenic phenotypes has been studied recently in more detail (reviewed for example in @Krijger2016; @Achinger-Kawecka2017; @Yu2017; @Andrey2017). 
 In these studies, the authors linked observed pathogenic phenotypes of congenital diseases and cancers to structural variations identified in the subjects genomes. 
 The observed phenotypes could not be explained, when only the disruption of protein-coding sequence or gene dosage was considered. However, when considering the genome folding structure and TADs together with enhancer activity, the pathogenic effect mechanism became apparent. 
 
-Deletions of TAD boundaries can lead to ectopic activation of genes by enhancers in neighboring TADs (Figure \@ref(TadDisruptions)A). 
+Deletions of TAD boundaries can lead to ectopic activation of genes by enhancers in neighboring TADs (Fig. \@ref(fig:TadDisruptions)A). 
 This effect mechanism was first shown to be relevant by computationally integrating hundreds of deletions with tissue-specific enhancers, phenotype-gene associations, and TAD positions.
 A significant proportion of deletion cases could be best explained by such an enhancer adaption mechanism [@Ibn-Salem2014].
 
 Experimentally validated examples include the locus of the *LMNB1* gene [@Giorgio2015].
-Deletion of a TAD boundary upstream of *LMNB1* result in ectopic contact of enhancers with the *LMNB1* promoter, and overexpression of *LMNB1*.
+Deletion of a TAD boundary upstream of *LMNB1* results in ectopic contact of enhancers with the *LMNB1* promoter, and overexpression of *LMNB1*.
 This pathomechanism leads to autosomal dominant adult-onset demyelinating leukodystrophy [@Giorgio2015].
 
 Miss-expression due to ectopic contacts with enhancer can be validated now using CRISPR-derived methodologies to induce structural variants in mice [@Kraft2015; @Andrey2017]. 
@@ -145,16 +145,16 @@ Deletion of a TAD boundary upstream of *LMNB1* result in ectopic contact of enha
 This pathomechanism leads to autosomal dominant adult-onset demyelinating leukodystrophy [@Giorgio2015].
 
 <!-- ---------------------------------------------------------------- -->
-```{r TadDisruptions, fig.cap='(ref:TadDisruptions)', out.width='80%', fig.align='center'}
+```{r TadDisruptions, fig.cap='(ref:TadDisruptionsCap)', out.width='80%', fig.align='center'}
 knitr::include_graphics("figures/Andrey2017_Fig5.png")
 ```
 
-(ref:TadDisruptions) **Structural variants affect TAD structure and enhancer-promoter interactions.** Structural variants (SVs) can induce ectopic or loss of gene expression leading to disease. Here, topologically associating domains (TADs) are represented by shaded triangles, genes by gray blocks, and enhancers by colored ovals. Gene expression patterns driven by enhancers in E10.5 mouse embryos are shown. A representative looped chromatin configuration is shown above the TADs. **(A)** In the wild-type chromatin conformation, Enhancer C (E-C) controls Gene 3 (G-3) in the neural tube. **(B)** The deletion of a boundary element between the two TADs leads to ectopic contact between Enhancer C (E-C) and Gene 1 (G-1) (red arrow), which results in the ectopic expression of Gene 1 in the neural tube. **(C)** In the case of a rearragment through an inversion (blue arrows) or translocation that leads to the repositioning of functional elements, Enhancer C (E-C) from a neighboring TAD is free to activate Gene 1 (G-1), resulting in the ectopic expression of Gene 1 in the neural tube. The inversion also leaves Enhancer C insulated from its native target Gene 3 (G-3) by a boundary, resulting in the loss of Gene 3 expression in the neural tube. **(D)** The duplication of a region allows a new chromatin domain (a neo-TAD; green triangle) to form that contains regulatory region(s) and gene(s), which produce new expression patterns. Here, the duplicated Enhancer C′ (E-C′) and Gene 2′ (G-2′), which both locate to the insulated neo-TAD, produce the ectopic expression of Gene 2′ in the neural tube. Figure adpated from [@Andrey2017].
+(ref:TadDisruptionsCap) **Structural variants can affect TAD structure and enhancer-promoter interactions.** Structural variants can induce ectopic increase or loss of gene expression leading to disease. Here, topologically associating domains (TADs) are represented by shaded triangles, genes by gray blocks, and enhancers by colored ovals. Gene expression patterns driven by enhancers in ebrioinc day 10.5 mouse embryos are shown. A representative chromatin configuration is shown above the TADs. **(A)** In the wild-type chromatin conformation, Enhancer C (E-C) controls Gene 3 (G-3) in the neural tube. **(B)** The deletion of a TAD boundary element leads to ectopic contact between Enhancer C (E-C) and gene 1 (G-1) (red arrow), which results in the ectopic expression of Gene 1 in the neural tube. **(C)** In the case of a rearrangment  through an inversion (blue arrows) or translocation that leads to the repositioning of functional elements, Enhancer C (E-C) from a neighboring TAD is free to activate Gene 1 (G-1), resulting in the ectopic expression of Gene 1 in the neural tube. The inversion also leaves Enhancer C insulated from its native target Gene 3 (G-3) by a boundary, resulting in the loss of Gene 3 expression in the neural tube. **(D)** The duplication of a region allows a new chromatin domain (a neo-TAD; green triangle) to form that contains regulatory region(s) and gene(s), which produce new expression patterns. Here, the duplicated Enhancer C′ (E-C′) and Gene 2′ (G-2′), which both locate to the insulated neo-TAD, produce the ectopic expression of Gene 2′ in the neural tube. Figure and figure caption adpated from [@Andrey2017].
 
 <!-- ---------------------------------------------------------------- -->
 
-Depending on their size and positioning, also duplications can bring enhancers into contact with gene promoters, which were before separated by a TAD boundary (Fig. \@ref(TadDisruptions)D).
-Duplications involving no regulatory elements and is contained entirely within a TAD (intra-TAD) have in general no major effect on genes in the same TAD, as enhancer-promoter contacts are mainly invariant of genomic distance within TADs [@Symmons2016]. 
+Depending on their size and positioning, also duplications can bring enhancers into contact with gene promoters, which were before separated by a TAD boundary (Fig. \@ref(fig:TadDisruptions)D).
+Duplications involving no regulatory elements and contained entirely within a TAD (intra-TAD) have in general no major effect on genes in the same TAD, as enhancer-promoter contacts are mainly invariant of genomic distance within TADs [@Symmons2016]. 
 This lack of regulatory phenotype can also explain why paralog genes are often created by tandem-duplications within TADs during evolution without affecting the regulatory environments of other genes (Chapter \@ref(paralog-regulation)). 
 However, when an intra-TAD duplication contains regulatory environments with several enhancers, increased regulatory inputs can lead to over-expression. 
 This mechanism leads to upregulation of the *SOX9* gene and in turn cases female to male sex reversal [@Franke2016].
@@ -162,7 +162,7 @@ However, further extension of the duplication at the *SOX9* locus, encompassing 
 Since both, *SOX9* enhancers and the *KCN72* gene are included in the duplicated regions, *KCN72* gets activated by the *SOX9* enhancers leading to Cooks syndrome [@Franke2016].
 
 Beside deletions and duplications, balanced chromosomal abnormalities (BCA) like inversion or translocation can disrupt TAD and lead to similar effect mechanism without gain or loss of genetic material.
-Inversions of TAD boundaries can bring promoters under the control of enhancers, that were before in different TADs (Fig. \@ref(TadDisruptions)C).
+Inversions of TAD boundaries can bring promoters under the control of enhancers, that were before in different TADs (Fig. \@ref(fig:TadDisruptions)C).
 Such a mechanism leads for example to F-syndrome, where inversion of the centromeric boundary of the *EPHA4* TAD cause activation of the *WNT6* gene [@Lupianez2015].
 Another recent study analyzed BCAs in 273 subjects with a spectrum of congenital abnormalities and find 7.3% of them disrupting TADs encompassing known syndromic loci. 
 Eight rearrangement breakpoints were localized in a single TAD containing the *MEF2C* gene and resulted in decreased expression of *MEF2C* in these subjects [@Redin2017]. 
@@ -177,7 +177,7 @@ Together, these studies confirm our findings of computationally predicted pathom
 TAD disruptions can lead to miss-expression not only during evolution but also in disease manifestation. 
 Therefore, it will be increasingly important to take the three-dimensional genome folding structure into account to interpret the effect of genetic variants. 
 
-## Integrating genome folding data can explain the pathomechanism structural variants
+## Genome folding data can explain the pathomechanism of structural variants
 
 Structural variation, either inherited or arising from de novo germline or somatic mutations, make up the majority of different nucleotides among human genomes [@Sudmant2015; @Auton2015].
 By their ability to alter gene dosage, promote gene fusions, unmask recessive alleles, or disrupt associations between genes and their regulatory elements, structural variants are involved in numerous congenital syndromes and cancers [@Stankiewicz2010].
@@ -197,7 +197,7 @@ Therefore, computational integration of genomic and phenotypic data is a crucial
 However, the here presented computational prediction method is limited by the quality of genomic and phenotypic data. 
 An essential step in our analysis was the quantification of phenotype similarities between phenotypes annotated to genes, on the one hand, and phenotypes observed in the subject, on the other hand. 
 This gene prioritization was only possible by detailed phenotypic annotation data of subjects using the Human Phenotype Ontology (HPO). 
-The HPO provides a standardized vocabulary of phenotypic abnormalities encountered in human disease and relations between them. Furthermore, phenotypes are associations to disease by mono-genic diseases [@Kohler2014]. 
+The HPO provides a standardized vocabulary of phenotypic abnormalities encountered in human disease and relations between them. Furthermore, HPO links phenotype terms to genes using data from mono-genic diseases [@Kohler2014]. 
 The brought application of such deeply structured phenotypic information will be essential for correctly interpreting genomic variants causing individual abnormalities observed in heterogeneous patient cohorts [@Brookes2015]. 
 While the continuously decreasing sequencing costs allow variant detection at high-resolution in large cohorts and populations, the detailed and precise phenotypical annotation using standardized vocabularies is lacking often behind.  
 
@@ -208,19 +208,20 @@ This tissue-specificity raises the question of whether chromatin interaction dat
 Although genome-wide contact maps become increasingly available in recent years, high heterogeneity between proximity-ligation methods makes it challenging to train prediction methods on data across different studies.
 Therefore, it will be crucial to computationally predict long-range interaction in the tissue of interest from other tissue-specific genomic data that is measured along the linear genome. 
 
-Another critical challenge is to predict not only the disrupted chromatin interactions but also gained interactions and resulting domain organization. Similar to the creation of neo-TADs by tandem-duplication of TAD boundaries, inversion and translocations can create novel folding structures by connecting loci that were before separated by TAD boundaries or even on different chromosomes. However, which regions in such fused TADs interact across rearrangement breakpoints is not clear and is can currently only be measured experimentally in transgenic mouse models.
+Another critical challenge is to predict not only the disrupted chromatin interactions but also gained interactions and resulting domain organization. Similar to the creation of neo-TADs by tandem-duplication of TAD boundaries, inversion and translocations can create novel folding structures by connecting loci that were before separated by TAD boundaries or even on different chromosomes. However, which regions in such fused TADs interact across rearrangement breakpoints is not clear and can currently only be measured experimentally in transgenic mouse models.
 Computational models that predict long-range interactions from genomic sequence could help here. A prediction model could be trained on the unaffected genome to learn sequence features that predict chromatin interactions. The model can then be applied to the genome sequence that is altered by structural variations to predict the resulting folding structure. Such prediction models can help to understand better if and how new TADs are formed and which regulatory interactions are gained upon structural variations.
 
 We provide initial support for such an approach by developing 7C to predict chromatin looping interactions from protein binding data and sequence motifs (Chapter \@ref(loop)). 
-Approaches, like 7C, allows predicting genome folding by taking into account both, the tissue specificity and potentially altered genomic sequence. 
+Approaches, like 7C, allow predicting genome folding by taking into account both, the tissue specificity and potentially altered genomic sequence. 
 However, the application on predicting folding in rearranged genomes needs to be demonstrated. 
 
-## Condition specific genome folding
+## Towards studying condition specific genome folding
 
 Understanding the variability of genome folding is a key challenge faced by ongoing and future genomic research. 
 It becomes increasingly clear that condition-specific long-range interaction data is needed to (i) associate genetic variants to affected target genes, (ii) associate TF binding sites and enhancers to genes, (iii) understand the variability of long-range contacts across individuals and (iv) reveal the contribution of single cells to folding structures observed for cell populations. 
 
 ### Interpretation of genetic variants by interacting genes
+
 The majority of disease-associated variants uncovered by genome-wide association studies (GWAS) reside in noncoding sequences. Many variants are located near cis-regulatory sequences and enhancers and could, therefore, contribute to pathogenesis by affecting transcription of specific genes [@Hindorff2009]. 
 The ability to measure long-range chromatin interactions allows understanding the role of non-coding variants by predicting its interacting target gene [@Smemo2014; @Visser2012]. 
 This has been shown by measuring the interactions of promoters in 17 human primary hematopoietic cells types revealing more than 2,400 potential disease-associated genes liked to thousands of GWAS SNPs [@Javierre2016].
@@ -238,7 +239,7 @@ Since many enhancer-gene interactions appear to be in enclosed CTCF loops [@Hnis
 
 ### Variability of long-range interactions across individuals
 
-Interestingly, initial studies start to analyze ChIP-seq data of histone modifications across populations [@Grubert2015].  The variability of histone marks correlates with single nucleotide variants.  Interestingly, these histone quantitative trait loci (hQTLs) cluster in TADs. However, it is not clear yet, how TADs or individual loops vary across individuals. Therefore, predictive modeling approaches like 7C could fill this gap to analyze the variability of chromatin looping contacts cross individuals. 
+Interestingly, initial studies start to analyze ChIP-seq data of histone modifications across populations [@Grubert2015].  The variability of histone marks correlates with single nucleotide variants. These histone quantitative trait loci (hQTLs) cluster in TADs. However, it is not clear yet, how TADs or individual loops vary across individuals. Therefore, predictive modeling approaches like 7C could fill this gap to analyze the variability of chromatin looping contacts cross individuals. 
 When combined with SNP data from the same individuals, one could potentially correlate genetic variants and loop variations across individuals to find loop quantitative trait loci (loopQTLs).
 
 ### Genome folding in single cells
@@ -246,9 +247,9 @@ When combined with SNP data from the same individuals, one could potentially cor
 In contrast to imaging-based methods, genome-wide proximity-ligation experiments such as Hi-C and ChIA-PET measure chromatin contacts in cell populations. 
 This raises the question whether observed structures like A/B compartments, TADs, or loops appear only in a subset of cells or appear from variable contacts in every single cell. 
 Recently the Hi-C protocol has been adapted to measure contacts in single cells [@Sekelja2016; @Ulianov2017]. 
-A/B compartment structure has been by FISH experiments [@Wang2016d]. TADs were also observed in single-cell Hi-C data [@Nagano2013].
+A/B compartment structure has been confirmed by imaging methods on single chromosomes [@Wang2016d]. TADs were also observed in single-cell Hi-C data [@Nagano2013].
 Imaging and single-cell Hi-C studies have illustrated significant cell-to-cell variability regarding 3D genome organization [@Nagano2013; @Ramani2016; @Flyamer2017; @Stevens2017].
-Accordingly, TADs seems to emerge from cell population averages and do not exist as static structures in individual cells.
+Accordingly, TADs seem to emerge from cell population averages and do not exist as static structures in individual cells.
 However, it is unclear how this variability relates to gene regulation in single cells. 
 It will be an exciting challenge to improve single-cell protocols in a way to separate RNA from chromatin to measure from the same cell both, gene expression and genome folding by single-cell RNA-seq and single-cell Hi-C, respectively. 
 
@@ -275,15 +276,17 @@ These methodological advances together will enable analysis of the plasticity an
 ## Architectural proteins mediate chromatin looping
 
 A strong focus of current research in the field of three-dimensional chromatin architecture is to understand the molecular mechanism behind the formation of chromatin loops and TADs.
-It is not clear how molecular interactions between proteins at the nanometer scale organize micron-long protein-bound DNA molecules.
-TAD formation leads to insulating or facilitating interactions between specific genomic elements?
+It is not clear how molecular interactions between proteins at the nanometer scale organize micron-long protein-bound DNA molecules and how TAD formation can lead to insulating or facilitating interactions between specific genomic elements?
 
 Enrichment of CTCF at TAD boundaries, the convergent orientation of CTCF motifs in chromatin loops, as well as extensive polymer modeling result in the loop extrusion model (Section \@ref(loop-mechanism)).
-According to this model, loops and TADs are formed by active extrusion of chromatin through a loop-extruding factor. Thereby, barrier elements, such as CTCF can arrest the extrusion and lead to stable loops. Multiple further extrusion processes within such a loop can explain TAD like structures in Hi-C [@Fudenberg2018]. 
+According to this model, loops and TADs are formed by active extrusion of chromatin through a loop-extruding molecule Thereby, barrier elements, such as CTCF can arrest the extrusion and lead to stable loops. Multiple further extrusion processes within such loops can explain TAD like structures in Hi-C [@Fudenberg2018]. 
 
-However, it is not clear which factors drive loop formation. 
+- Cohesin removal [@Schwarzer2017]
+- CTCF removal [@Rao2017]
+
+However, it is not clear which other factors might drive loop formation. 
 Using our loop prediction tool 7C, we could screen ChIP-seq datasets from 124 different TF to quantify the ability of the TF binding signals to predict chromatin looping events.
-Interestingly, we could confirm many known architectural proteins, such as cohesin, CTCF, and ZNF143. 
+Interestingly, we could confirm the implication of many known architectural proteins, such as cohesin, CTCF, and ZNF143. 
 
 These findings are largely consistent with recent perturbation studies that analyze the effect of cohesin or CTCF depletion or knock-out on genome folding. 
 
@@ -302,8 +305,6 @@ Cohesin knockout studies reveal that cohesin is not required for the segregation
 <!-- - Rad21 Knockout and perturbation -->
 
 <!-- - leads to loop-extrustion model  -->
-
-
 
 
 ## Further directions
@@ -331,6 +332,7 @@ Cohesin knockout studies reveal that cohesin is not required for the segregation
    - Discuss single cell Hi-C
 
 ## Conclusions
+
 Recent methodological advances in chromatin conformation capture experiments resulted in genome-wide contact maps of genomes. 
 These data lead to many fascinating insights into the folding structures of genomes.
 One important discovery was that chromosomes fold locally into discreet genomic domains, called TADs. 
@@ -340,7 +342,7 @@ TADs represent a regulatory environment that restricts the interaction landscape
 Indeed, functionally related genes, such as paralogs, are co-regulated within TADs. 
 During evolution, new genes can emerge by duplication and find established regulatory environments within TADs. 
 Therefore, TADs represent productive nests for novel genes in evolution.
-Their stability further stressed the functional importance of TADs during hundred million years of evolution. Indeed stable TADs are associated with conserved expression profiles of genes. 
+Their stability further stressed the functional importance of TADs during million years of evolution. Indeed stable TADs are associated with conserved expression profiles of genes. 
 
 Disruption of TADs by rearrangements is associated with changes in gene expression profiles during evolution as well as in genomes of subjects with developmental diseases. 
 While these disruptions of TADs might be beneficial for an organism and lead to evolutionary leaps in some cases, I show in disease genomes, that disruptions of TADs can result in severe phenotypes like mental retardation. 
