--- a/bib/PhDfltClean.bib
+++ b/bib/PhDfltClean.bib
@@ -146,6 +146,16 @@
  year = {2011}
 }
 
+@article{Barrington2017,
+ author = {Barrington, Christopher and Finn, Ronald and Hadjur, Suzana},
+ doi = {10.1007/s10577-017-9550-3},
+ journal = {Chromosome Research},
+ pages = {1--10},
+ publisher = {Chromosome Research},
+ title = {Cohesin biology meets the loop extrusion model},
+ year = {2017}
+}
+
 @article{Beagrie2017,
  author = {Beagrie, Robert A. and Scialdone, Antonio and Schueler, Markus and Kraemer, Dorothee C. A. and Chotalia, Mita and Xie, Sheila Q. and Barbieri, Mariano and de Santiago, In{\^{e}}s and Lavitas, Liron-Mark and Branco, Miguel R. and Fraser, James and Dostie, Jos{\'{e}}e and Game, Laurence and Dillon, Niall and Edwards, Paul A. W. and Nicodemi, Mario and Pombo, Ana},
  doi = {10.1038/nature21411},
@@ -600,6 +610,18 @@
  title = {Two ways to fold the genome during the cell cycle: insights obtained with chromosome conformation capture},
  volume = {7},
  year = {2014}
+}
+
+@article{Dekker2017a,
+ author = {Dekker, Job and Belmont, Andrew S and Guttman, Mitchell and Leshyk, Victor O and Lis, John T and Lomvardas, Stavros and Mirny, Leonid A and O'Shea, Clodagh C and Park, Peter J and Ren, Bing and Ritland, Joan C and Shendure, Jay and Zhong, Sheng and Network, The 4D Nucleome and Shea, Clodagh C O and Park, Peter J and Ren, Bing and Politz, Joan C Ritland and Shendure, Jay and Zhong, Sheng},
+ doi = {10.1101/103499},
+ journal = {bioRxiv},
+ number = {7671},
+ pages = {103499},
+ publisher = {Nature Publishing Group},
+ title = {The 4D Nucleome Project},
+ volume = {549},
+ year = {2017}
 }
 
 @article{Dekker2015,
@@ -1075,6 +1097,17 @@
  title = {A promoter-level mammalian expression atlas.},
  volume = {507},
  year = {2014}
+}
+
+@article{Fortin2015,
+ author = {Fortin, Jean-Philippe and Hansen, Kasper D.},
+ doi = {10.1186/s13059-015-0741-y},
+ journal = {Genome Biology},
+ number = {1},
+ pages = {180},
+ title = {Reconstructing A/B compartments as revealed by Hi-C using long-range correlations in epigenetic data},
+ volume = {16},
+ year = {2015}
 }
 
 @phdthesis{Franke2017,
@@ -1618,6 +1651,18 @@
  title = {Spatial enhancer clustering and regulation of enhancer-proximal genes by cohesin},
  volume = {25},
  year = {2015}
+}
+
+@article{Innan2010,
+ author = {Innan, Hideki and Kondrashov, Fyodor},
+ doi = {10.1038/nrg2689},
+ journal = {Nature reviews. Genetics},
+ number = {2},
+ pages = {97--108},
+ publisher = {Nature Publishing Group},
+ title = {The evolution of gene duplications: classifying and distinguishing between models.},
+ volume = {11},
+ year = {2010}
 }
 
 @article{Jacobs1959,
@@ -2398,6 +2443,16 @@
  year = {2011}
 }
 
+@article{Nora2017,
+ author = {Nora, Elphege P and Goloborodko, Anton and Valton, Anne-Laure and Gibcus, Johan Harmen and Uebersohn, Alec and Abdennur, Nezar and Dekker, Job and Mirny, Leonid and Bruneau, Benoit},
+ doi = {10.1101/095802},
+ journal = {bioRxiv},
+ pages = {095802},
+ publisher = {Cold Spring Harbor Laboratory},
+ title = {Targeted degradation of CTCF decouples local insulation of chromosome domains from higher-order genomic compartmentalization},
+ year = {2017}
+}
+
 @article{Nora2012,
  author = {Nora, Elph{\`{e}}ge P and Lajoie, Bryan R and Schulz, Edda G and Giorgetti, Luca and Okamoto, Ikuhiro and Servant, Nicolas and Piolot, Tristan and van Berkum, Nynke L and Meisig, Johannes and Sedat, John and Gribnau, Joost and Barillot, Emmanuel and Bl{\"{u}}thgen, Nils and Dekker, Job and Heard, Edith},
  doi = {10.1038/nature11049},
@@ -2617,6 +2672,20 @@
  title = {Topologically associating domains are stable units of replication-timing regulation},
  volume = {515},
  year = {2014}
+}
+
+@article{Prakash2017,
+ archiveprefix = {arXiv},
+ arxivid = {https://doi.org/10.1101/217190},
+ author = {Prakash, Kirti and Fournier, David},
+ doi = {10.1016/j.biosystems.2017.11.005},
+ eprint = {/doi.org/10.1101/217190},
+ journal = {Biosystems},
+ pages = {49--59},
+ primaryclass = {https:},
+ title = {Evidence for the implication of the histone code in building the genome structure},
+ volume = {164},
+ year = {2018}
 }
 
 @article{Ptashne1986,
@@ -3380,6 +3449,17 @@
  year = {2004}
 }
 
+@article{Ulianov2015,
+ author = {Ulianov, Sergey V and Khrameeva, Ekaterina E and Gavrilov, Alexey A and Flyamer, Ilya M and Kos, Pavel and Mikhaleva, Elena A and Penin, Aleksey A and Logacheva, Maria D and Imakaev, Maxim V and Chertovich, Alexander and Gelfand, Mikhail S and Shevelyov, Yuri Y and Razin, Sergey V},
+ doi = {10.1101/gr.196006.115},
+ journal = {Genome research},
+ number = {1},
+ pages = {70--84},
+ title = {Active chromatin and transcription play a key role in chromosome partitioning into topologically associating domains.},
+ volume = {26},
+ year = {2015}
+}
+
 @article{Ulianov2017,
  author = {Ulianov, Sergey V. and Galitsyna, Aleksandra A. and Flyamer, Ilya M. and Golov, Arkadiy K. and Khrameeva, Ekaterina E. and Imakaev, Maxim V. and Abdennur, Nezar A. and Gelfand, Mikhail S. and Gavrilov, Alexey A. and Razin, Sergey V.},
  doi = {10.1186/s13072-017-0142-4},
@@ -3473,6 +3553,16 @@
  year = {2016}
 }
 
+@article{Waszak2015,
+ author = {Waszak, Sebastian M. and Delaneau, Olivier and Gschwind, Andreas R. and Kilpinen, Helena and Raghav, Sunil K. and Witwicki, Robert M. and Orioli, Andrea and Wiederkehr, Michael and Panousis, Nikolaos I. and Yurovsky, Alisa and Romano-Palumbo, Luciana and Planchon, Alexandra and Bielser, Deborah and Padioleau, Ismael and Udin, Gilles and Thurnheer, Sarah and Hacker, David and Hernandez, Nouria and Reymond, Alexandre and others},
+ doi = {10.1016/j.cell.2015.08.001},
+ journal = {Cell},
+ pages = {1--12},
+ publisher = {Elsevier Inc.},
+ title = {Population Variation and Genetic Control of Modular Chromatin Architecture in Humans},
+ year = {2015}
+}
+
 @article{Weiler1995,
  author = {Weiler, Karen S and Wakimoto, Barbara T},
  doi = {10.1146/annurev.ge.29.120195.003045},
@@ -3530,7 +3620,8 @@
 @book{Wickham2017,
  author = {Wickham, Hadley and Grolemund, Garrett},
  pages = {492},
- title = {R for data science : import, tidy, transform, visualize, and model data}
+ title = {R for data science : import, tidy, transform, visualize, and model data},
+ year = {2017}
 }
 
 @article{Will2017,
