--- a/index.Rmd
+++ b/index.Rmd
@@ -49,7 +49,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 <!-- Chromosome conformation capture experiments coupled with high-throughput sequencing (Hi-C) allow to measure DNA-DNA contacts genome-wide and reviled a highly organized hierarchy of three-dimensional genome organization. -->
 
-Proximity ligation methods probe the three-dimensional genome architecture and produce genome-wide maps of pairwise chromatin contact frequencies. Enrichment of these contacts in discrete intervals reveals local folding of chromosomes into so-called topologically associating domains (TADs). TADs restrict interactions between distal regulatory sequences, such as enhancers, with their target genes and might represent essential functional units of genome regulation.  
+The human genome is folded non-randomly in the nucleus. Proximity ligation methods probe the three-dimensional genome architecture and produce genome-wide maps of pairwise chromatin contact frequencies. Enrichment of these contacts in discrete intervals reveals local folding of chromosomes into so-called topologically associating domains (TADs). TADs restrict interactions between distal regulatory sequences, such as enhancers, with their target genes and might represent essential functional units of genome regulation.  
 This thesis describes the computational integration of genome-wide contact maps with diverse genomic datasets to relate TADs to gene regulation during evolution and in diseases. 
 More specifically, pairs of functionally related genes, such as paralogs, are enriched to be regulated with shared enhancers in the same TAD and have increased long-range contacts.  This clustering of related genes in TADs enables concerted gene expression and indicates evolutionary constraints in functional genome organization.
 Analysis of genomic rearrangements between human and diverse mammal species shows that TADs are conserved building blocks of genomes during evolution. While this conservation of TADs is associated with conserved gene expression, genes in rearranged TADs have divergent expression profiles. Consistently, we find disruption of TADs in whole-genome sequenced subjects with diverse neurodevelopmental phenotypes. While altered protein-coding sequences cannot explain these phenotypes, balanced chromosomal rearrangements disrupt TADs and promoter-enhancer interactions of phenotypically matching genes, leading to miss-expression in patient-derived cell lines.
