--- a/05-loop_prediction.Rmd
+++ b/05-loop_prediction.Rmd
@@ -2,12 +2,12 @@
 
 ### Preamble {-}
 > 
-> This chapter is submitted for publication. A preprint is published at bioRxiv:
+> This chapter is submitted for publication. A preprint is available on bioRxiv:
 > 
-> Ibn-Salem J^#^, Andrade-Navarro MA. Computational Chromosome Conformation Capture by Correlation of ChIP-seq at CTCF motifs. bioRxiv. 2018. [doi:10.1101/257584](https://doi.org/10.1101/257584).
+> **Ibn-Salem J^#^**, Andrade-Navarro MA. **_Computational Chromosome Conformation Capture by Correlation of ChIP-seq at CTCF motifs_**. bioRxiv. 2018. [doi:10.1101/257584](https://doi.org/10.1101/257584).
 >
-> The preprint is availible online: https://www.biorxiv.org/content/early/2018/02/01/257584.
-> My contributions to this publication is indicated in Table \@ref(tab:contribution). 
+> The preprint is available online: https://www.biorxiv.org/content/early/2018/02/01/257584.
+> My contributions to this publication are indicated in Table \@ref(tab:contribution). 
 > The source code of the complete analysis is available at GitHub: https://github.com/Juppen/sevenC and https://github.com/Juppen/sevenC_analysis.
 > Supplementary figures and links to supplementary tables are shown in Appendix [D](#loop-support).
 > 
